--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,5 +1,5 @@
 .about-page {
-  padding-bottom: 2rem;
+  padding: 5rem 0 2rem;
 }
 
 .delayed-content {
@@ -12,7 +12,7 @@
 }
 
 .about-section {
-  padding: 5rem 0 3rem;
+  padding: 2rem 0 3rem;
   text-align: center;
   position: relative;
   overflow: hidden;
